# egui-nodes-app

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust-ci.yml
crates/core-graph/: Cargo.toml
crates/core-graph/src/: error.rs  eval.rs  ids.rs  lib.rs  model.rs
crates/dag-lib/: Cargo.toml
crates/dag-lib/src/: error.rs  eval.rs  ids.rs  lib.rs  model.rs  serde.rs
crates/egui-nodes/: Cargo.toml
crates/egui-nodes-app/: Cargo.toml
crates/egui-nodes-app/src/: layout_bridge.rs  lib.rs  main.rs  style_panel.rs
crates/egui-nodes-app/src/graph/: id.rs
crates/egui-nodes/src/: adapter.rs  io.rs  layout_bridge.rs  lib.rs  state.rs  view.rs
crates/egui-nodes/src/graph/: error.rs  layout.rs  mod.rs
crates/egui-nodes/src/snarl_adapter/: mod.rs  viewer.rs
crates/egui-nodes/src/ui/: canvas_style_panel.rs  default_node.rs  mod.rs  state.rs  style.rs  view.rs  workspace.rs
crates/egui-nodes/src/ui/editor/: mod.rs  shell_viewer.rs
crates/egui-nodes/src/ui/nodes_engine/: mod.rs
crates/egui-nodes/src/ui/nodes_engine/canvas/: background_pattern.rs  draw.rs  graph_menu.rs  graph_state.rs  mod.rs  node_viewer.rs  pin.rs  scene.rs  snarl_graph_state.rs  snarl_node_viewer.rs  snarl_pin.rs  snarl_scale.rs  snarl_wire.rs  style.rs  transform.rs  wire.rs
crates/egui-snarl/: Cargo.toml  README.md
crates/egui-snarl-fork/: Cargo.toml
crates/egui-snarl-fork/src/: lib.rs  ui.rs
crates/egui-snarl-fork/src/ui/: background_pattern.rs  state.rs
crates/egui-snarl/src/: ui.rs
crates/egui-snarl/src/ui/: wire.rs
crates/graph-lib/: Cargo.toml
crates/graph-lib/src/: error.rs  eval.rs  layout.rs  lib.rs  model.rs  pin_type.rs
crates/nodes-app/: Cargo.toml
crates/nodes-app/src/: demo.rs  main.rs  style_panel.rs
crates/nodes-core/: Cargo.toml
crates/nodes-core/src/: error.rs  graph.rs  id.rs  io.rs  layout.rs  lib.rs
crates/nodes-egui/: Cargo.toml
crates/nodes-egui/src/: lib.rs  shell.rs  state.rs  style.rs  view.rs
crates/nodes-snarl/: Cargo.toml
crates/nodes-snarl/src/: bridge.rs  layout_map.rs  lib.rs
src/: main.rs  style_panel.rs
