[workspace]
members = [
    "crates/dag-lib",
    "crates/egui-nodes",
    ".",
]
default-members = ["."]
resolver = "2"

[workspace.dependencies]
egui = "0.33"
eframe = "0.33.3"
egui-phosphor = "0.11.0"

[package]
name = "egui-nodes-app"
version = "0.1.0"
edition = "2024"
description = "Playground binary for egui-nodes (depends on the library crate only)"

[[bin]]
name = "egui-nodes-app"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui-nodes = { path = "crates/egui-nodes" }
