[package]
name = "egui-nodes-app"
version = "0.1.0"
edition = "2024"
description = "egui_nodes library + editor binary in one package"

[lib]
# Stable `use egui_nodes::…` for the reusable core (publishable as its own crate later).
name = "egui_nodes"
path = "src/lib.rs"

[[bin]]
name = "egui-nodes-app"
path = "src/main.rs"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
anyhow = "1"
eframe = "0.33.3"
egui = "0.33"
egui-phosphor = "0.11.0"
egui-snarl = { path = "../egui-snarl-fork", package = "egui-snarl" }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1"
