[package]
name = "egui-nodes"
version = "0.1.0"
edition = "2024"
description = "Snarl adapter + node editor widgets on top of core-graph — GUI layer, no graph logic"

[lib]
name = "egui_nodes"
path = "src/lib.rs"

[features]
default = ["serde"]
serde = ["dep:serde", "core-graph/serde"]

[dependencies]
anyhow = "1"
core-graph = { path = "../core-graph", default-features = false }
egui = "0.33"
egui-snarl-fork = { path = "../egui-snarl-fork" }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1"
