[package]
name = "egui-nodes"
version = "0.1.0"
edition = "2024"
description = "Node editor widgets and NodeGraph canvas on top of core-graph — GUI layer, no graph logic"

[lib]
name = "egui_nodes"
path = "src/lib.rs"

[features]
default = ["serde"]
serde = ["dep:serde", "core-graph/serde", "egui/serde", "slab/serde"]
egui-probe = ["dep:egui-probe"]

[dependencies]
anyhow = "1"
core-graph = { path = "../core-graph", default-features = false }
egui = "0.33"
egui-scale = "0.3.0"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1"
slab = "0.4"
smallvec = { version = "1.15", features = ["const_new"] }
egui-probe = { version = "0.10.0", features = ["derive"], optional = true }
