
[package]
name = "egui-snarl"
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-snarl"
repository = "https://github.com/zakarumych/egui-snarl"
description = "Node-graphs for egui"
readme = "README.md"

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui = "0.33"
slab = { version = "0.4" }
serde = { version = "1", features = ["derive"], optional = true }
smallvec = { version = "1.15", features = ["const_new"] }

egui-probe = { version = "0.10.0", features = ["derive"], optional = true }
egui-scale = "0.3.0"

[dev-dependencies]
eframe = { version = "0.33", features = ["serde", "persistence"] }
egui_extras = { version = "0.33", features = ["all_loaders"] }
serde_json = "1"
syn = "2"

[[example]]
name = "demo"
required-features = ["serde", "egui-probe"]
