[package]
name = "graph-lib"
version = "0.1.0"
edition = "2024"
description = "Directed graph model for dataflow (DAG-oriented), stable ids, optional evaluation — no GUI"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
