[package]
name = "nodes-core"
version = "0.1.0"
edition = "2024"
description = "Semantic graph (nodes, edges, layout) and serialization — independent of egui"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
anyhow = "1"
serde_json = "1"
serde = { version = "1", optional = true, features = ["derive"] }
